--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.66.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
+    "react-window": "^2.2.2",
     "yup": "^1.7.1"
   },
   "devDependencies": {
